--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,13 @@
 version: 2
 jobs:
-  deploy:
+  build:
     docker:
-      - image: circleci/python:2.7-jessie
-    working_directory: ~/circleci-docs
+      - image: debian:stretch
     steps:
+      - checkout
       - run:
-          name: Install awscli
-          command: sudo pip install awscli
+          name: Greeting
+          command: echo Hello, World!
       - run:
-          name: Deploy to S3
-          # command: aws s3 sync jekyll/_site/docs s3://circle-production-static-site/docs/ --delete
-          command: ls -al 
+          name: Print the current time
+          command: date
