--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: publysher/hugo:0.20
+      - image: felicianotech/docker-hugo:0.44
     working_directory: ~/project
     steps:
       - checkout
