--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,10 @@ version: 2
 jobs:
   build:
     docker:
-      - image: felicianotech/docker-hugo:0.44
+      - image: publysher/hugo:0.20
     working_directory: ~/project
     steps:
       - checkout
       - run:
           name: "Run Hugo"
           command: HUGO_ENV=production hugo -v
-      - run:
-          name: "Test Website"
-          command: htmlproofer src/public --allow-hash-ref --check-html --empty-alt-ignore --disable-external
