--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,15 +15,17 @@ jobs:
             - public/*
   
   deployment:
-    docker: [{ image: "circleci/python:latest" }]
+    docker:
+      - image: kessmgr/circleci_python:latest
     working_directory: "~/project"
     steps:
-      - attach_workspace: { at: "~/artifacts" }
+      - attach_workspace:
+          at: ~/artifacts
       - run:
           name: "Push to S3"
-          command: 
+          command: |
             pip install --user awscli
-            ./.local/bin/aws s3 sync ~/artifacts/public s3://gregkessman.com
+            aws s3 sync ~/artifacts/public s3://gregkessman.com
 
 workflows:
   version: 2
