--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,7 @@ jobs:
           at: ~/artifacts
       - run:
           name: "Push to S3"
-          command: |
-            pip install --user awscli
-            aws s3 sync ~/artifacts/public s3://gregkessman.com
+          command: aws s3 sync ~/artifacts/public s3://gregkessman.com
 
 workflows:
   version: 2
