--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,35 +4,65 @@ jobs:
   build:
     docker:
       - image: publysher/hugo:0.20
-    working_directory: ~/project
+    working_directory: /gregkessman.com
     steps:
       - checkout
+
       - run:
           name: "Run Hugo"
           command: |
             HUGO_ENV=production hugo -v
-            ls -al
+
       - persist_to_workspace:
           root: "~/project" 
           paths: 
             - public/*
-  
-  deployment:
+
+  infra:
+    working_directory: /gregkessman.com
     docker:
-      - image: kessmgr/circleci_python:latest
-    working_directory: "~/project"
+      - image: hashicorp/terraform:0.11.11
+
     steps:
+      - checkout
+
       - attach_workspace:
-          at: ~/artifacts
+          at: /gregkessman.com
+
+      run:
+        name: Terraform
+        command: ./deploy/infra.sh
+  
+  deploy:
+    docker:
+      - image: hashicorp/terraform:0.11.11
+    working_directory: /gregkessman.com
+
+    steps:
+      - checkout
+
+      - attach_workspace:
+          at: /gregkessman.com
+
       - run:
-          name: "Push to S3"
-          command: /home/circleci/.local/bin/aws s3 sync ~/artifacts/public s3://gregkessman.com
+          name: "S3"
+          command: ./deploy/site.sh
 
 workflows:
   version: 2
-  build-test-deploy:
+  build:
     jobs:
       - build
-      - deployment:
-          requires: ["build"]
-          filters: { branches: { only: "master" } }
+      -infra:
+         requires:
+          - build
+         filters:
+           branches:
+             only: master
+      - deploy:
+          requires:
+            - build
+            - infra
+          filters:
+            branches:
+              only: master
