ci yml syntax fix #3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             HUGO_ENV=production hugo -v
 
       - persist_to_workspace:
-          root: "~/project" 
+          root: /gregkessman.com
           paths: 
             - public/*
 
