--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,7 @@ jobs:
 
       - run:
           name: Terraform
-          command: |
-            ls -al
-            ./deploy/infra.sh
+          command: ./deploy/infra.sh
   
   deploy:
     docker:
